--- a/roles/spark/tasks/main.yml
+++ b/roles/spark/tasks/main.yml
@@ -8,5 +8,5 @@
 - name: Build Spark with maven
   shell: mvn -DskipTests clean package
   args: 
-    chdir: {{ spark_directory }} 
+    chdir: spark_directory  
 
